--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,11 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+	&copy; {today.getFullYear()} Aviral K. All opinions presented here are my own and do not reflect on the beliefs of my employer. 
 </footer>
 <style>
 	footer {
+		font-size: 0.5rem;
 		padding: 25px;
 		text-align: center;
 	}
