--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,9 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
+import "the-new-css-reset/css/reset.css";
 import '../styles/global.scss';
+
 
 export interface Props {
 	title: string;
